lazy-attribute/test/04-unsupported-args.stderr
error: Arguments are not supported on #[lazy_*] functions
  --> test/04-unsupported-args.rs:24:12
   |
24 | fn get_foo(nope: i32) -> Foo {
   |            ^^^^^^^^^

error[E0425]: cannot find function `get_foo` in this scope
 --> test/04-unsupported-args.rs:8:23
  |
8 |     println!("{:#?}", get_foo());
  |                       ^^^^^^^ not found in this scope

error[E0425]: cannot find function `get_foo` in this scope
 --> test/04-unsupported-args.rs:9:23
  |
9 |     println!("{:#?}", get_foo());
  |                       ^^^^^^^ not found in this scope
